fix: categories wrap

--- a/frontend/src/components/HeaderCategories/HeaderCategories.module.sass
+++ b/frontend/src/components/HeaderCategories/HeaderCategories.module.sass
@@ -36,6 +36,8 @@
       display: flex
       align-items: flex-start
       cursor: pointer
+      white-space: nowrap
+
     &_Count
       @include font-count
       flex: 0 0 auto
